Clean UnLoad() methods that actually unload everything. Now shows a floor texture (called flat), too.

--- a/Projects/VCE 2005/skulls3d.vcproj
+++ b/Projects/VCE 2005/skulls3d.vcproj
@@ -210,6 +210,14 @@
 				Name="lumps"
 				>
 				<File
+					RelativePath="..\..\Src\doom\Lumps\FlatLump.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\Src\doom\Lumps\FlatLump.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\Src\doom\Lumps\LevelLump.cpp"
 					>
 				</File>
