--- a/Projects/VCE 2008/skulls3d.vcproj
+++ b/Projects/VCE 2008/skulls3d.vcproj
@@ -182,6 +182,14 @@
 			Name="doom"
 			>
 			<File
+				RelativePath="..\..\Src\doom\Texture.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\Texture.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Src\doom\Thing.cpp"
 				>
 			</File>
@@ -254,14 +262,6 @@
 				</File>
 				<File
 					RelativePath="..\..\Src\doom\Lumps\PlayPalLump.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\TextureLump.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\TextureLump.h"
 					>
 				</File>
 				<File
