Now loads Textures.

--- a/Projects/VCE 2005/skulls3d.vcproj
+++ b/Projects/VCE 2005/skulls3d.vcproj
@@ -183,6 +183,14 @@
 			Name="doom"
 			>
 			<File
+				RelativePath="..\..\Src\doom\Texture.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\Texture.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Src\doom\Thing.cpp"
 				>
 			</File>
