--- a/trunk/Projects/VCE 2005/skulls3d.vcproj
+++ b/trunk/Projects/VCE 2005/skulls3d.vcproj
@@ -311,6 +311,14 @@
 			RelativePath="..\..\Src\main.cpp"
 			>
 		</File>
+		<File
+			RelativePath="..\..\Src\mainmenu.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\Src\mainmenu.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
