Removed printfs. Does not load all textures at boot time. New drawind functions.

--- a/Projects/VCE 2005/skulls3d.vcproj
+++ b/Projects/VCE 2005/skulls3d.vcproj
@@ -311,6 +311,14 @@
 			RelativePath="..\..\Src\main.cpp"
 			>
 		</File>
+		<File
+			RelativePath="..\..\Src\mainmenu.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\Src\mainmenu.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
