--- a/trunk/Projects/VC 2008/skulls3d.vcproj
+++ b/trunk/Projects/VC 2008/skulls3d.vcproj
@@ -357,6 +357,14 @@
 			RelativePath="..\..\Src\mainmenu.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\Src\minimap.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\Src\minimap.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
