--- a/Projects/VC 2008/skulls3d.vcproj
+++ b/Projects/VC 2008/skulls3d.vcproj
@@ -48,7 +48,6 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -66,6 +65,7 @@
 				OutputFile="$(IntDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\SDL\lib"
+				IgnoreDefaultLibraryNames="MSVCRT.lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)$(TargetName).pdb"
 				SubSystem="1"
@@ -142,6 +142,7 @@
 				OutputFile="$(IntDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\..\SDL\lib"
+				IgnoreDefaultLibraryNames="MSVCRT.lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)$(TargetName).pdb"
 				SubSystem="1"
@@ -186,6 +187,22 @@
 			</File>
 			<File
 				RelativePath="..\..\Src\doom\LineDef.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\Sector.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\Sector.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\SideDef.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Src\doom\SideDef.h"
 				>
 			</File>
 			<File
@@ -240,27 +257,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\Src\doom\Lumps\LineDefsLump.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\LineDefsLump.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\Src\doom\Lumps\Lump.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\Src\doom\Lumps\Lump.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\PatchesLump.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\PatchesLump.h"
 					>
 				</File>
 				<File
@@ -285,22 +286,6 @@
 				</File>
 				<File
 					RelativePath="..\..\Src\doom\Lumps\SoundLump.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\ThingsLump.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\ThingsLump.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\VertexesLump.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\Src\doom\Lumps\VertexesLump.h"
 					>
 				</File>
 			</Filter>
