--- a/trunk/Projects/VC 2008/skulls3d.vcproj
+++ b/trunk/Projects/VC 2008/skulls3d.vcproj
@@ -224,6 +224,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\Src\doom\SSector.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Src\doom\Texture.cpp"
 				>
 			</File>
