--- a/Projects/VC 2008/skulls3d.vcproj
+++ b/Projects/VC 2008/skulls3d.vcproj
@@ -232,6 +232,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\Src\doom\SSector.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Src\doom\SSector.h"
 				>
 			</File>
